# dynamodb-local

./: .gitignore  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt
.github/workflows/: publish_pypi.yaml
src/dynamodb_local/: __init__.py
src/dynamodb_local/tests/: test_dynamodb_local.py
