[project]
description = "DynamoDB local downloader"
name = "dynamodb-local"
license = {text = "Apache-2.0 AND MIT"}
authors = [
  {name = "Tim Heiko", email = "175552092+timheiko@users.noreply.github.com"},
]
requires-python = ">= 3.10"
readme = "README.rst"
dynamic = [
  "version",
]

[tool.setuptools.dynamic]
version = {attr = "dynamodb_local.__version__"}
