[build-system]
requires = [
  "setuptools >= 75.3.0"
]

[project]
description = "DynamoDB local downloader"
name = "dynamodb-local"
license = {text = "Apache-2.0 AND MIT"}
authors = [
  {name = "Tim Heiko", email = "175552092+timheiko@users.noreply.github.com"},
]
requires-python = ">= 3.10"
readme = "README.rst"
dynamic = [
  "version",
]
dependencies = [
  "build",
]

[project.optional-dependencies]
dev = [
  "black >= 26.3.1",
  "isort >= 8.0.1",
  "pytest >= 9.0.3",
  "pytest-asyncio >= 1.3.0",
]

[tool.setuptools.dynamic]
version = {attr = "dynamodb_local.__version__"}

[project.urls]
"Source" = "https://github.com/timheiko/dynamodb-local"
"Bug Tracker" = "https://github.com/timheiko/dynamodb-local/issues"

[tool.isort]
profile = "black"
