[build-system]
requires = [
  "setuptools >= 75.3.0"
]

[project]
description = "DynamoDB local downloader"
name = "dynamodb-local"
license = "Apache-2.0 AND MIT"
license-files = [
  "LICENSE.txt",
]
authors = [
  {name = "Tim Heiko", email = "175552092+timheiko@users.noreply.github.com"},
]
requires-python = ">= 3.10"
readme = "README.rst"
dynamic = [
  "version",
]
dependencies = [
  "build",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools.dynamic]
version = {attr = "dynamodb_local.__version__"}

[project.urls]
"Source" = "https://github.com/timheiko/dynamodb-local"
"Bug Tracker" = "https://github.com/timheiko/dynamodb-local/issues"

[tool.isort]
profile = "black"
